--- a/assets/scss/common/_variables.scss
+++ b/assets/scss/common/_variables.scss
@@ -579,6 +579,9 @@ $widget-danger:                         $danger !default;
 
 $atum-icon-font: "atum-icon-font" !default;
 
+$atmi-pick-pack: "\e9da";
+$atmi-stock-takes: "\e9db";
+$atmi-question: "\e9d9";
 $atmi-ok: "\e9d8";
 $atmi-po-pro: "\e9d7";
 $atmi-featured: "\e9d4";
